<resources>
    <string name="app_name">Komodo Hub</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Login</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="komodoHub">KOMODO HUB</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="dontHaveAccount">Don\'t Have An Account?</string>
    <string name="signIn">Sign In</string>
    <string name="description">A Digital Platform for Community-Supported Animal Conservation</string>
    <string name="createAccount">Create An Account</string>
    <string name="createAnAccount">Create An Account</string>
    <string name="email">Email</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="signUp">Sign Up</string>
    <string name="haveAccount">Already Have An Account?</string>
    <string name="signin">Sign In</string>
    <string name="register">Register</string>
    <string name="role">Role</string>
    <string name="roleOfParticipants">Role(\"SystemAdmin, SchoolAdmin, Teacher, Student\")</string>
    <string name="signInAccount">Sign In</string>
    <string name="login_email">Email</string>
    <string name="loginPassword">Password</string>
    <string name="teacherName">Name</string>
    <string name="updateStudentRecord">Update Student Record</string>
    <string name="manageSchoolAdminTextView">Manage School Admin</string>
    <string name="adminPasswordHint">Admin Password</string>
    <string name="manageTeacherEditView">Manage Teacher</string>
    <string name="teacherPasswordEditText">Password</string>
    <string name="teacherNameEditText">Name</string>
    <string name="teacherEmailEditText">Email</string>
    <string name="teacherDepartmentEditText">Department</string>
    <string name="teacherQualificationEditText">Qualification</string>
    <string name="teacherEmploymentDateEditText">Empoyment Date - YY - MM - DD</string>
    <string name="viewAsGuest">Continue As Visitor</string>

    !-- Array for content types -->
    <string-array name="content_type_array">
        <item>Video</item>
        <item>Article</item>
        <item>Document</item>
    </string-array>

</resources>